[package]
name = "jcode-llm-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "jcode_llm_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
