[package]
name = "jcode-plugin-core"
version = "0.1.0"
edition = "2024"
description = "Core types, manifest, security, and event definitions for the jcode plugin system"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1.0", features = ["serde"] }
thiserror = "2"
regex = "1"
