[package]
name = "jcode-provider-app"
version = "0.1.0"
edition = "2024"
[lib]
name = "jcode_provider_app"
path = "src/lib.rs"
[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
jcode-llm-core = { path = "../jcode-llm-core" }
jcode-provider-metadata = { path = "../jcode-provider-metadata" }
