[package]
name = "jcode-provider-claude-cli-runtime"
version = "0.1.0"
edition = "2024"
description = "Deprecated Claude CLI provider runtime (subprocess transport) for jcode, kept downstream of jcode-base so provider edits do not rebuild the app spine"

[lib]
name = "jcode_provider_claude_cli_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
jcode-base = { path = "../jcode-base" }
jcode-message-types = { path = "../jcode-message-types" }
jcode-provider-core = { path = "../jcode-provider-core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "process", "io-util"] }
tokio-stream = "0.1"
