[package]
name = "next-code-agent-runtime"
version = "0.1.0"
edition = "2024"

[lib]
name = "next_code_agent_runtime"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
