[package]
name = "next-code-build-support"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
next-code-core = { path = "../next-code-core" }
next-code-selfdev-types = { path = "../next-code-selfdev-types" }
next-code-storage = { path = "../next-code-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
