[package]
name = "next-code-hooks"
version = "0.1.0"
edition = "2021"
description = "Hook system for jcode lifecycle events"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures = "0.3"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
