[package]
name = "next-code-llm-dialects"
version = "0.1.0"
edition = "2024"

[lib]
name = "next_code_llm_dialects"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
next-code-llm-core = { path = "../next-code-llm-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
