[package]
name = "next-code-plugin-core"
version = "0.1.0"
edition = "2024"
description = "Core types, manifest, security, and event definitions for the next-code plugin system"

[dependencies]
next-code-core = { path = "../next-code-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1.0", features = ["serde"] }
thiserror = "2"
regex = "1"
tokio = { version = "1", features = ["sync", "fs", "macros", "process", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
