[package]
name = "next-code-plugin-runtime"
version = "0.1.0"
edition = "2024"
description = "QuickJS plugin runtime: sandbox, transpiler, dispatcher, and bridge for the next-code plugin system"

[dependencies]
next-code-core = { path = "../next-code-core" }
next-code-agent-runtime = { path = "../next-code-agent-runtime" }
next-code-plugin-core = { path = "../next-code-plugin-core" }
rquickjs = { version = "0.7", features = ["parallel", "futures", "classes"] }
tokio = { version = "1", features = ["fs", "process", "sync", "time", "macros", "rt"] }
tokio-stream = "0.1"
futures = "0.3"
regex = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
seahash = "4"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
swc_ecma_ast = "25"
swc_ecma_parser = "41"
swc_ecma_transforms_typescript = "49"
swc_ecma_transforms_base = "44"
swc_ecma_codegen = "28"
swc_common = "23"
swc_atoms = "9"
